unpackaged/main/default/objects/OrderApi__Assignment__c/OrderApi__Assignment__c.object-meta.xml
<CustomObject>
    <description>Assignments track Contacts assigned to purchases of Items (Only available when Items are available for Assignment - determined by the parent Item Class)</description>
    <label>Assignment</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Assignment ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>