unpackaged/main/default/objects/OrderApi__Assignment__c/fields/EventApi__Contact_Created_By_System__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Contact_Created_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be automatically checked when the contact is created while registering for an event.</description>
    <inlineHelpText>This field will be automatically checked when the contact is created while registering for an event..</inlineHelpText>
    <label>Contact Created By System</label>
    <type>Checkbox</type>
</CustomField>