unpackaged/main/default/objects/OrderApi__Assignment__c/fields/EventApi__Other_Information__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Other_Information__c</fullName>
    <description>Other information needed to configure the assignment.</description>
    <inlineHelpText>Other information needed to configure the assignment.</inlineHelpText>
    <label>Other Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>