unpackaged/main/default/objects/OrderApi__Assignment__c/fields/EventApi__Register_Site_Url__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Register_Site_Url__c</fullName>
    <description>URL endpoint to be used for email registrants.</description>
    <inlineHelpText>URL endpoint to be used for email registrants.</inlineHelpText>
    <label>Register Site Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>