unpackaged/main/default/objects/OrderApi__Assignment__c/fields/EventApi__Registration_Group__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Registration_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The registration group this assignment belongs to for invitations that may need to be sent out.</description>
    <inlineHelpText>The registration group this assignment belongs to for invitations that may need to be sent out.</inlineHelpText>
    <label>Registration Group</label>
    <referenceTo>EventApi__Registration_Group__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>