unpackaged/main/default/objects/OrderApi__Assignment__c/fields/EventApi__Seat__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Seat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Linked to the related seat.</description>
    <inlineHelpText>Linked to the related seat.</inlineHelpText>
    <label>Seat</label>
    <referenceTo>EventApi__Seat__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>