unpackaged/main/default/objects/OrderApi__Assignment__c/fields/FON_Attendee_Name__c.field-meta.xml
<CustomField>
    <fullName>FON_Attendee_Name__c</fullName>
    <formula>OrderApi__Contact__r.FirstName &amp; &#39; &#39; &amp; OrderApi__Contact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attendee Name</label>
    <type>Text</type>
</CustomField>