unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Assigned_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assigned_Date__c</fullName>
    <description>** System Calculated Required Override ** Defaults to the parent Sales Order Line.</description>
    <inlineHelpText>** System Calculated Required Override ** Defaults to the parent Sales Order Line.</inlineHelpText>
    <label>Assigned Date</label>
    <type>Date</type>
</CustomField>