unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Assignment_Role__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Assignment_Role__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated Required Override ** Link to the Role for the assigned Contact on record.</description>
    <inlineHelpText>** System Calculated Required Override ** Link to the Role for the assigned Contact on record.</inlineHelpText>
    <label>Assignment Role</label>
    <referenceTo>OrderApi__Assignment_Role__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>