unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Company_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Company_Name__c</fullName>
    <description>Contact company name.</description>
    <inlineHelpText>Contact company name.</inlineHelpText>
    <label>Company Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>