unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Contact__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Link to assigned Contact record</description>
    <inlineHelpText>** Required ** Link to assigned Contact record</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sales Activities</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>