unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Email__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Email__c</fullName>
    <description>** Conditionally Required ** The email address to send notifications to regarding the &quot;Assigned To&quot; record -- required if &quot;Receives Email Notifications&quot; is checked. Defaults to the related Contact&#39;s &quot;Preferred Email&quot;.</description>
    <inlineHelpText>** Conditionally Required ** The email address to send notifications to regarding the &quot;Assigned To&quot; record -- required if &quot;Receives Email Notifications&quot; is checked. Defaults to the related Contact&#39;s &quot;Preferred Email&quot;.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>