unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__First_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__First_Name__c</fullName>
    <description>Contact first name.</description>
    <inlineHelpText>Contact first name.</inlineHelpText>
    <label>First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>