unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Full_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Full_Name__c</fullName>
    <description>Contact full name.</description>
    <inlineHelpText>Contact full name.</inlineHelpText>
    <label>Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>