unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the Contact is considered &quot;Active&quot;. Defaults checked.</description>
    <inlineHelpText>When checked, the Contact is considered &quot;Active&quot;. Defaults checked.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>