unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Is_Primary__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the Assignment is considered &quot;Primary&quot;.</description>
    <inlineHelpText>When checked, the Assignment is considered &quot;Primary&quot;.</inlineHelpText>
    <label>Is Primary</label>
    <type>Checkbox</type>
</CustomField>