unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Is_Unassigned__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Is_Unassigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated ** This checkbox will auto check to true when a Subscriber (Assignment) is marked as &quot;Is Active&quot; unchecked AND is related to a &quot;Is Active&quot; checked Subscription.</description>
    <inlineHelpText>** System Calculated ** This checkbox will auto check to true when a Subscriber (Assignment) is marked as &quot;Is Active&quot; unchecked AND is related to a &quot;Is Active&quot; checked Subscription.</inlineHelpText>
    <label>Is Unassigned</label>
    <type>Checkbox</type>
</CustomField>