unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Item__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to related Item.</description>
    <inlineHelpText>** System Calculated ** Link to related Item.</inlineHelpText>
    <label>Item</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>