unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Item_Class__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Item_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to related Item Class.</description>
    <inlineHelpText>** System Calculated ** Link to related Item Class.</inlineHelpText>
    <label>Item Class</label>
    <referenceTo>OrderApi__Item_Class__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>