unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Last_Name__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Last_Name__c</fullName>
    <description>Contact last name.</description>
    <inlineHelpText>Contact last name.</inlineHelpText>
    <label>Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>