unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Mailing_City__c</fullName>
    <description>Contact mailing city.</description>
    <inlineHelpText>Contact mailing city.</inlineHelpText>
    <label>Mailing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>