unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Mailing_Country__c</fullName>
    <description>Contact mailing country.</description>
    <inlineHelpText>Contact mailing country.</inlineHelpText>
    <label>Mailing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>