unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Mailing_Postal_Code__c</fullName>
    <description>Contact mailing postal code.</description>
    <inlineHelpText>Contact mailing postal code.</inlineHelpText>
    <label>Mailing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>