unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Mailing_Street__c</fullName>
    <description>Contact mailing street.</description>
    <inlineHelpText>Contact mailing street.</inlineHelpText>
    <label>Mailing Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>