unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Phone__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Phone__c</fullName>
    <description>Contact phone.</description>
    <inlineHelpText>Contact phone.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>