unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Receives_Email_Notifications__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Receives_Email_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked the linked Contact will be copied on all emails sent regarding the &quot;Assigned To&quot; record. Defaults to the value of the same field on the related &quot;Role&quot; configuration.</description>
    <inlineHelpText>When checked the linked Contact will be copied on all emails sent regarding the &quot;Assigned To&quot; record. Defaults to the value of the same field on the related &quot;Role&quot; configuration.</inlineHelpText>
    <label>Receives Email Notifications</label>
    <type>Checkbox</type>
</CustomField>