unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Sales_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Sales_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** Required ** Assignments must be linked to a source Sales Order Line</description>
    <inlineHelpText>** Required ** Assignments must be linked to a source Sales Order Line</inlineHelpText>
    <label>Sales Order Line (Source)</label>
    <referenceTo>OrderApi__Sales_Order_Line__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>