unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Subscription__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Subscription for the subscribing customer.</description>
    <inlineHelpText>Link to related Subscription for the subscribing customer.</inlineHelpText>
    <label>Subscription</label>
    <referenceTo>OrderApi__Subscription__c</referenceTo>
    <relationshipLabel>Subscribers</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>