unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Subscription_Line__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Subscription_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>** System Calculated ** Link to related Subscription Line.</description>
    <inlineHelpText>** System Calculated ** Link to related Subscription Line.</inlineHelpText>
    <label>Subscription Line</label>
    <referenceTo>OrderApi__Subscription_Line__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>