unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Term__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to related Term for the subscribing customer.</description>
    <inlineHelpText>Link to related Term for the subscribing customer.</inlineHelpText>
    <label>Term</label>
    <referenceTo>OrderApi__Renewal__c</referenceTo>
    <relationshipLabel>Assignments</relationshipLabel>
    <relationshipName>Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>