unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Title__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Title__c</fullName>
    <description>Contact title.</description>
    <inlineHelpText>Contact title.</inlineHelpText>
    <label>Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>