unpackaged/main/default/objects/OrderApi__Assignment__c/fields/OrderApi__Unassigned_Date__c.field-meta.xml
<CustomField>
    <fullName>OrderApi__Unassigned_Date__c</fullName>
    <description>The date the Contact was unassigned.</description>
    <inlineHelpText>The date the Contact was unassigned.</inlineHelpText>
    <label>Unassigned Date</label>
    <type>Date</type>
</CustomField>