unpackaged/main/default/objects/OrderApi__Assignment__c/listViews/OrderApi__All.listView-meta.xml
<ListView>
    <fullName>OrderApi__All</fullName>
    <columns>NAME</columns>
    <columns>OrderApi__Is_Active__c</columns>
    <columns>OrderApi__Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>